fix local deps issue